# derekinside

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.yaml  docker-compose.yml  generate_deck.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  phase-template.md
.github/workflows/: ci.yml
docs/: benchmarks.md  hardware-assessment.md  project-management-gate.md
docs/adr/: ADR-001-architecture-foundation.md  ADR-003-bridge-architecture.md
docs/rfcs/: 0001-fact-logging.md  0002-everos-merge.md
integrations/obsidian-plugin/: README.md  main.js  manifest.json  package.json  styles.css
scripts/: entity_extraction_compare.py  full_batch_extract.py  long_mem_eval.py  migrate-from-gbrain.py  run_all_modes.sh
src/derekinside/: __init__.py  cli.py  config.py
src/derekinside/bridge/: __init__.py  agent_store.py  auth.py  http.py  mcp.py
src/derekinside/drivers/: __init__.py  ollama.py  openai.py  vllm.py
src/derekinside/engine/: __init__.py  engine.py  model.py  pipeline.py  profiler.py  registry.py
src/derekinside/frontend/: index.html
src/derekinside/indexer/: __init__.py  chunker.py  classifier.py  consensus.py  embedder.py  enricher.py  entity.py  entity_resolver.py  fusion.py  graph_pruner.py  merge.py  relation_inferrer.py
src/derekinside/search/: __init__.py  hybrid.py  propagation.py  reranker.py
src/derekinside/storage/: __init__.py  graph.py  pgvector.py  subgraph.py
tests/: benchmark.py  test_integration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_track_a.py
