[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "derekinside"
version = "0.1.0"
description = "Know your project from the inside out — local-first AI knowledge system"
authors = [{name = "aITMS01", email = "aitms01@derekinside.dev"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "python-dateutil>=2.8",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "click>=8.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
pgvector = ["psycopg[binary]>=3.1"]
ollama = ["httpx>=0.27"]
http = ["fastapi>=0.100", "uvicorn>=0.24"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.15"]

[project.scripts]
derekinside = "derekinside.cli:main"
